validacion vendedor
